# GCCM

./: .gitignore  README.md  pyproject.toml  shell.nix
GCCM_python/: diffusion.py  nobound_DiffusionMean.ipynb
GCCM_python/data/: Mg_aligned.tif
GCCM_python/diffusion_results/: mean50_c00_t30_diff01_nolowerbound.pkl
Gao_code/raster/: GCCM.r  HeavyMetal.R  basic.r  nlights_aligned.tif  x_xmap_y_10_60_110_.csv
Gao_code/raster_corrected/: GCCM_corrected.r  HeavyMetal_corrected.R  basic_corrected.r  dTRI_nlights03.csv
code/: Clark.R  DiffsuionDelayed.ipynb  Diffusion.ipynb  DiffusionMean.ipynb  DiffusionShort.ipynb  DiffusionVersions.ipynb  GCCM_gao.py  GCCM_gao_corrected.py  GCCM_sampling.py  HeavyMetal.ipynb  HeavyMetal_gao.ipynb  Pollution.ipynb  PollutionData.ipynb  _code.ipynb  code.ipynb  diffusion.ipynb  diffusion.py  diffusionMean.py  diffusionVersions.py  grid_diffusionMean.py  nobound_DiffusionMean.ipynb  nobound_diffusionMean.py  nobound_diffusionVersions.py  optimalEmbedding.py  plot.py  runGCCM.ipynb  simulation.ipynb  versions.py  versionsDiff.py
code/data/: CausalImagesTutorialDat.tfrecord  dTRI_aligned.tif  temp50.nc  temp51.nc
code/diffusion_data/: unimodal_08_X.npy  unimodal_08_Y.npy
code/diffusion_results/: mean10_c01_t30.pkl  mean50_c00_t30_diff01.pkl  mean50_c01_t30.pkl  mean50_c01_t30_diff01.pkl  mean50_c01_t30_diff01_nolowerbound.pkl  (+1 more)
gccm_python/: GCCM_gao.py  GCCM_gao_corrected.py  GCCM_sampling.py  Pollution.ipynb  basic_gao.py  grid_diffusionMean.py  nobound_DiffusionMean.ipynb  optimalEmbedding_sampling.py  plot.py  runGCCM.ipynb
(+90 files in other folders)
